--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "firstapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ktmcodelabs.github.io/react-native-web",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^17.0.2",
+    "react-art": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-web": "^0.17.5",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
@@ -15,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
